--- a/www/roze-offline.html
+++ b/www/roze-offline.html
@@ -19,173 +19,17 @@
     <script src="js/back_btn.js"></script>
     <script src="js/query-string.js"></script>
     <script src="js/simplebar.min.js"></script>
-<!--    <script src="js/download.js"></script>-->
 	
 	<script>
-		var temp_element;
-		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
-			$('#status').html("Start");		
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
 			//onDeviceReady();
 		}
 
 		function onDeviceReady() {
-			//init_audio();
-			console.log("onDeviceReady");
-/////////////////////////////////////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////////////////////////////////////
-/////START DOWNLOAD//////////////////////////////////////////////////////////////////////
-		$('.play_it').each( function(i) {
-			//$(this).css("display","none");
-			var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-			if($.inArray($.md5($(this).attr('online')),temp_array) != -1)
-			{
-				$(this).removeClass("need_download").addClass("downloaded");
-			}
-		});
-		$('.play_it').click( function(i) {
-			temp_element = $(this);
-			//alert($(this).attr('online'));
-			
-			//play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
-			play_or_download($(this).attr('online'),"mp3");
-		});
-		
-		
-		
-		if(window.localStorage.getItem('downloaded_files') == null){
-			window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
-		}
-		
-		
-		if(window.localStorage.getItem('download_address') == null){
-			
-			window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
-				function(fs) {
-					window.localStorage.setItem('download_address',fs.root.toURL());
-				}, function(e) {
-					alert('failed to get fs');
-					alert(JSON.stringify(e));
-				}
-			);
-		}
-
-		console.log("window.localStorage.getItem('download_address'):" + window.localStorage.getItem('download_address'));
-		console.log("window.localStorage.getItem('downloaded_files'):" + window.localStorage.getItem('downloaded_files'));
-
-	}
-	
-	function play_or_download(URL,Extension) {
-		console.log("play_or_download URL: " + URL);
-		console.log("play_or_download Extension: " + Extension);
-
-		if (device.platform == 'iOS')
-		{
-			downloadPath = "cdvfile://localhost/persistent/";
-			window.localStorage.setItem('download_address',downloadPath);
-		}
-		
-		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
-		console.log("play_or_download : " + downloadPath);
-		if(check_download(URL))
-		{
-			console.log("play_or_download : check_download");
-			
-			//playAudio_new(downloadPath);
-			var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
-			media.play();
-		}
-		else
-		{
-			console.log("play_or_download : start_download");
-			start_download(URL,Extension);
-		}
-	}
-	
-/*
-	function alertDismissed() {
-		// do something
-	}
-*/
-	function start_download(URL,Extension) {
-/*
-		var networkState = navigator.connection.type;
-		if (networkState == Connection.NONE) {
-			navigator.notification.alert(
-				'شما برای اینکار به اینترنت نیاز دارید.\n You need internet to download this file.',  // message
-				alertDismissed,         // callback
-				'اخطار',            // title
-				'تائید'                  // buttonName
-			);
-		}
-		else{
-			return false;
-		}
-*/
-		console.log("start_download URL: " + URL);
-		console.log("start_download Extension: " + Extension);
-		
-		var FileTransfer_OBJ = new FileTransfer();
-		var uri = encodeURI(URL);
-		
-		if (device.platform == 'iOS')
-		{
-			downloadPath = "cdvfile://localhost/persistent/";
-			window.localStorage.setItem('download_address',downloadPath);
-		}
-		
-		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
-		console.log("start_download : " + downloadPath);
-		
-		FileTransfer_OBJ.onprogress = function(progressEvent) {
-			if (progressEvent.lengthComputable) {
-				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
-				$('#status').html(perc + "% loaded...");
-			} else {
-				$('#status').html($('#status').html() + ".");
-			}
-		};
-		
-		FileTransfer_OBJ.download(uri, downloadPath, 
-			function(entry) {	
-				$('#status').html("done");
-				console.log("start_download : done");
-				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-				temp_array.push($.md5(URL));
-				window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));			
-			}, 
-			function(error) {
-				alert('Crap something went wrong...');	
-				alert(JSON.stringify(error));
-			},
-			true
-		);
-	}
-	
-	function check_download(URL) {
-		console.log("check_download URL: " + URL);
-		var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-		console.log("check_download Extension: " + window.localStorage.getItem('downloaded_files'));
-		if($.inArray($.md5(URL),temp_array) != -1)
-		{
-			console.log("check_download true");
-			return true;
-		}
-		else
-		{
-			console.log("check_download false");
-			return false;
-		}
-	}
-
-/////START DOWNLOAD//////////////////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////////////////////////////////////
-/////////////////////////////////////////////////////////////////////////////////////////
-/*
-			//init_audio();
+			init_audio();
 			
 			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
@@ -195,12 +39,6 @@
 			}
 		
 		}
-*/
-		
-		
-		
-		
-		
 		function uniqueDeviceIDsuccess_index(uuid)
 		{
 			window.localStorage.setItem('uuid',uuid);
@@ -254,9 +92,7 @@
 <style>
 ul.big_list li {
   background-image: url("images/naghsh.png");
-  background-position: right 12px;
-  border-right: 6px solid transparent;
-  
+  background-position: right 6px top 12px;
   background-repeat: no-repeat;
   background-size: 31px auto;
   border-bottom: 1px solid white;
@@ -275,13 +111,6 @@ ul.big_list {
     width: 100%;
     box-sizing: border-box;
 }
-
-ul.big_list li.need_download {
-  background-image: url("images/download.png");
-  background-position: right 6px;
-  background-size: 26px auto;
-}
-
 
 </style>
 <!--footer-bg-center.png-->
@@ -309,20 +138,16 @@ ul.big_list li.need_download {
 
 				<div id="container">
 					<div id="main" class="">
-						<div id="status">---</div><br/>
-						<a href="01_download.html">sssssssss</a><br/>
-						<button id="startDl" onclick="play_or_download('http://dlsmgroup.ir/temp/salameee.mp3','mp3');" >Click to Download and Play</button>
-						<br/>
 						<ul class="big_list">
-							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/bikhavas/01.mp3" offline="audio/bikhavas/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" offline="audio/roze/03.mp3" play_type="offline" onclick2='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" offline="audio/roze/04.mp3" play_type="online" onclick2='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" offline="audio/roze/05.mp3" play_type="online" onclick2='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" offline="audio/roze/06.mp3" play_type="online" onclick2='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/07.mp3" offline="audio/roze/07.mp3" play_type="online" onclick2='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/08.mp3" offline="audio/roze/08.mp3" play_type="online" onclick2='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
-							<li class="play_it" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/09.mp3" offline="audio/roze/09.mp3" play_type="online" onclick2='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
+							<li onclick='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
+							<li onclick='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li onclick='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li onclick='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
 						</ul>
 
 					</div>
@@ -368,7 +193,7 @@ ul.big_list li.need_download {
 	<a href="#" id="small" >قلم</a>
 	<div id="controls_bg"></div>
 </div>
-<!--<script>-->
+<script>
 	//init_audio("audio/roze/0.mp3");
 
 	audio_Timer = $("#audioTimer");
@@ -588,6 +413,6 @@ ul.big_list li.need_download {
 		
 		Timer.html(minutes + ":" + seconds);
 	};
-<!--</script>-->
+</script>
 </body>
 </html>
