--- a/www/roze.html
+++ b/www/roze.html
@@ -114,67 +114,75 @@
 		console.log("start_download check internet");
 		networkState = navigator.connection.type;
 		if (networkState == Connection.NONE) {
-			console.log("start_download : we have internet");
+			console.log("start_download : NO internet");
+			navigator.notification.alert(
+				'You are the winner!',  // message
+				temp_function,         // callback
+				'Game Over',            // title
+				'Done'                  // buttonName
+			);
+			/*
 			navigator.notification.alert(
 				'شما برای اینکار به اینترنت نیاز دارید',  // message
 				temp_function,         // callback
 				'اخطار',            // title
 				'تائید'                  // buttonName
 			);
+			*/
 		}
 		else{
-			console.log("start_download : NO internet");
-			return false;
-		}
+			console.log("start_download : we have internet");
 
-		console.log("start_download URL: " + URL);
-		console.log("start_download Extension: " + Extension);
-		
-		var FileTransfer_OBJ = new FileTransfer();
-		var uri = encodeURI(URL);
-		
-		if (device.platform == 'iOS')
-		{
-			downloadPath = "cdvfile://localhost/persistent/";
-			window.localStorage.setItem('download_address',downloadPath);
-		}
-		
-		$('.progress-bar-parent').css("display","block");
-		
-		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
-		console.log("start_download : " + downloadPath);
-		
-		FileTransfer_OBJ.onprogress = function(progressEvent) {
-			if (progressEvent.lengthComputable) {
-				var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
-				$('#status').html(perc + "% loaded...");
-				$('.progress-bar-percent').css('width',perc + "%");
-				//progress_bar_element.css('width',perc);
-			} else {
-				$('#status').html($('#status').html() + ".");
-				//progress_bar_element.css('width',progress_bar_element.width()+1);
-				$('.progress-bar-percent').css('width',$('.progress-bar-parent').find('span').width()+1);
+			console.log("start_download URL: " + URL);
+			console.log("start_download Extension: " + Extension);
+			
+			var FileTransfer_OBJ = new FileTransfer();
+			var uri = encodeURI(URL);
+			
+			if (device.platform == 'iOS')
+			{
+				downloadPath = "cdvfile://localhost/persistent/";
+				window.localStorage.setItem('download_address',downloadPath);
 			}
-		};
-		
-		FileTransfer_OBJ.download(uri, downloadPath, 
-			function(entry) {	
-				$('#status').html("");
-				$('.progress-bar-parent').find('span').css('width','2%');
-				console.log("start_download : done");
-				temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
-				temp_array.push($.md5(URL));
-				window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));	
-				
-				temp_element.removeClass("need_download");
-				$('.progress-bar-parent').css("display","none");				
-			}, 
-			function(error) {
-				alert('Crap something went wrong...');	
-				alert(JSON.stringify(error));
-			},
-			true
-		);
+			
+			$('.progress-bar-parent').css("display","block");
+			
+			downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+			console.log("start_download : " + downloadPath);
+			
+			FileTransfer_OBJ.onprogress = function(progressEvent) {
+				if (progressEvent.lengthComputable) {
+					var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
+					$('#status').html(perc + "% loaded...");
+					$('.progress-bar-percent').css('width',perc + "%");
+					//progress_bar_element.css('width',perc);
+				} else {
+					$('#status').html($('#status').html() + ".");
+					//progress_bar_element.css('width',progress_bar_element.width()+1);
+					$('.progress-bar-percent').css('width',$('.progress-bar-parent').find('span').width()+1);
+				}
+			};
+			
+			FileTransfer_OBJ.download(uri, downloadPath, 
+				function(entry) {	
+					$('#status').html("");
+					$('.progress-bar-parent').find('span').css('width','2%');
+					console.log("start_download : done");
+					temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+					temp_array.push($.md5(URL));
+					window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));	
+					
+					temp_element.removeClass("need_download");
+					$('.progress-bar-parent').css("display","none");				
+				}, 
+				function(error) {
+					alert('Crap something went wrong...');	
+					alert(JSON.stringify(error));
+				},
+				true
+			);
+			
+		}
 	}
 	
 	function check_download(URL) {
