--- a/www/online_roze.html
+++ b/www/online_roze.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/font.css" />
 	<link rel="stylesheet" type="text/css" href="css/simplebar.css" />
+	<link rel="stylesheet" type="text/css" href="css/progress.bar.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 	<script src="js/jquery-1.11.3.min.js"></script>
@@ -19,10 +20,18 @@
     <script src="js/back_btn.js"></script>
     <script src="js/query-string.js"></script>
     <script src="js/simplebar.min.js"></script>
+<!--    <script src="js/download.js"></script>-->
 	
 	<script>
+		var temp_element;
+		var progress_bar_element;
+		function temp_function() {
+			// do something
+		}
+		
 		function init() {		
 			console.log('SMGROUP ::::::::::::::::::::::::::::::::::::    start init()');
+			//$('#status').html("Start");		
 			document.addEventListener("deviceready", onDeviceReady, false);
 			
 			//onDeviceReady();
@@ -30,15 +39,175 @@
 
 		function onDeviceReady() {
 			init_audio();
+			console.log("onDeviceReady");
 			
-			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
 			
 			if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 				document.addEventListener("backbutton", go_back, false);
 			}
+/////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////
+/////START DOWNLOAD//////////////////////////////////////////////////////////////////////
+		$('.play_it').each( function(i) {
+			//$(this).css("display","none");
+			var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+			if($.inArray($.md5($(this).attr('online')),temp_array) != -1)
+			{
+				$(this).removeClass("need_download").addClass("downloaded");
+			}
+		});
+		$('.play_it').click( function(i) {
+			temp_element = $(this);
+			//alert($(this).attr('online'));
+			
+			//play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3','mp3');
+			play_or_download($(this).attr('online'),"mp3");
+		});
 		
+		
+		
+		if(window.localStorage.getItem('downloaded_files') == null){
+			window.localStorage.setItem('downloaded_files',JSON.stringify(["786","110"]));	
 		}
+		
+		
+		if(window.localStorage.getItem('download_address') == null){
+			
+			window.requestFileSystem(LocalFileSystem.TEMPORARY, 0, 
+				function(fs) {
+					window.localStorage.setItem('download_address',fs.root.toURL());
+				}, function(e) {
+					alert('failed to get fs');
+					alert(JSON.stringify(e));
+				}
+			);
+		}
+
+		console.log("window.localStorage.getItem('download_address'):" + window.localStorage.getItem('download_address'));
+		console.log("window.localStorage.getItem('downloaded_files'):" + window.localStorage.getItem('downloaded_files'));
+
+	}
+	
+	function play_or_download(URL,Extension) {
+		console.log("play_or_download URL: " + URL);
+		console.log("play_or_download Extension: " + Extension);
+
+		if (device.platform == 'iOS')
+		{
+			downloadPath = "cdvfile://localhost/persistent/";
+			window.localStorage.setItem('download_address',downloadPath);
+		}
+		
+		downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+		console.log("play_or_download : " + downloadPath);
+		if(check_download(URL))
+		{
+			console.log("play_or_download : check_download");
+			
+			playAudio_new(downloadPath,true);
+			//var media = new Media(downloadPath, null, function(e) { alert(JSON.stringify(e));});
+			//media.play();
+		}
+		else
+		{
+			console.log("play_or_download : start_download");
+			start_download(URL,Extension);
+		}
+	}
+
+	function start_download(URL,Extension) {
+		console.log("start_download check internet");
+		networkState = navigator.connection.type;
+		if (networkState == Connection.NONE) {
+			console.log("start_download : NO internet");
+			navigator.notification.alert(
+				'شما برای اینکار به اینترنت نیاز دارید',  // message
+				temp_function,         // callback
+				'اخطار',            // title
+				'تائید'                  // buttonName
+			);
+		}
+		else{
+			console.log("start_download : we have internet");
+
+			console.log("start_download URL: " + URL);
+			console.log("start_download Extension: " + Extension);
+			
+			var FileTransfer_OBJ = new FileTransfer();
+			var uri = encodeURI(URL);
+			
+			if (device.platform == 'iOS')
+			{
+				downloadPath = "cdvfile://localhost/persistent/";
+				window.localStorage.setItem('download_address',downloadPath);
+			}
+			
+			$('.progress-bar-parent').css("display","block");
+			
+			downloadPath = window.localStorage.getItem('download_address') + $.md5(URL) + "." + Extension;
+			console.log("start_download : " + downloadPath);
+			
+			FileTransfer_OBJ.onprogress = function(progressEvent) {
+				if (progressEvent.lengthComputable) {
+					var perc = Math.floor(progressEvent.loaded / progressEvent.total * 100);
+					$('#status').html(perc + "% loaded...");
+					$('.progress-bar-percent').css('width',perc + "%");
+					//progress_bar_element.css('width',perc);
+				} else {
+					$('#status').html($('#status').html() + ".");
+					//progress_bar_element.css('width',progress_bar_element.width()+1);
+					$('.progress-bar-percent').css('width',$('.progress-bar-parent').find('span').width()+1);
+				}
+			};
+			
+			FileTransfer_OBJ.download(uri, downloadPath, 
+				function(entry) {	
+					$('#status').html("");
+					$('.progress-bar-parent').find('span').css('width','2%');
+					console.log("start_download : done");
+					temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+					temp_array.push($.md5(URL));
+					window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));	
+					
+					temp_element.removeClass("need_download");
+					$('.progress-bar-parent').css("display","none");				
+				}, 
+				function(error) {
+					alert('Crap something went wrong...');	
+					alert(JSON.stringify(error));
+				},
+				true
+			);
+			
+		}
+	}
+	
+	function check_download(URL) {
+		console.log("check_download URL: " + URL);
+		var temp_array = JSON.parse(window.localStorage.getItem('downloaded_files'));
+		console.log("check_download Extension: " + window.localStorage.getItem('downloaded_files'));
+		if($.inArray($.md5(URL),temp_array) != -1)
+		{
+			console.log("check_download true");
+			return true;
+		}
+		else
+		{
+			console.log("check_download false");
+			return false;
+		}
+	}
+
+/////END DOWNLOAD////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////
+
+		
+		
+		
+		
+		
 		function uniqueDeviceIDsuccess_index(uuid)
 		{
 			window.localStorage.setItem('uuid',uuid);
@@ -92,7 +261,9 @@
 <style>
 ul.big_list li {
   background-image: url("images/naghsh.png");
-  background-position: right 6px top 12px;
+  background-position: right 12px;
+  border-right: 6px solid transparent;
+  
   background-repeat: no-repeat;
   background-size: 31px auto;
   border-bottom: 1px solid white;
@@ -112,11 +283,29 @@ ul.big_list {
     box-sizing: border-box;
 }
 
+ul.big_list li.need_download {
+  background-image: url("images/download.png");
+  background-position: right 6px;
+  background-size: 26px auto;
+}
+
+
 </style>
 <!--footer-bg-center.png-->
 </head>
 <body class="tarjome_disable" onload="init();" style="overflow:hidden;width:100%;">
 <div id="bg-top"></div><div id="bg-bottom"></div>
+<!--/////////////////////////////////////////////////////////////////////////////-->
+<!--/////////////////////////////////////////////////////////////////////////////-->
+<!--////START DOWNLOAD///////////////////////////////////////////////////////////-->
+<div class="progress-bar-parent">
+	<div class="progress-bar green glow">
+		<span class="progress-bar-percent" style="width: 2%"></span>
+	</div>
+</div>
+<!--///END DOWNLOAD//////////////////////////////////////////////////////////////-->
+<!--/////////////////////////////////////////////////////////////////////////////-->
+<!--/////////////////////////////////////////////////////////////////////////////-->
 <div id="ajax" class="mypreload">
 	<div style="z-index: 1000; border: medium none; margin: 0px; padding: 0px; width: 100%; height: 100%; top: 0px; left: 0px; background-color: #f0f0f0; opacity: 1; cursor: default; position: fixed;overflow:visible;" class="blockUI blockOverlay"></div>
 	<div style="z-index: 1011; position: fixed; padding: 0px; margin: 0px; width: 100%; top: 28%; left: 0%; text-align: center;border: medium none;overflow:visible;" class="blockUI blockMsg blockPage"><img src="images/preloader.gif"></div>
@@ -138,16 +327,17 @@ ul.big_list {
 
 				<div id="container">
 					<div id="main" class="">
+						<div id="status"></div>
 						<ul class="big_list">
-							<li onclick='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
-							<li onclick='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li onclick='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
-							<li onclick='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/01.mp3" offline="audio/roze/01.mp3" play_type="online" onclick2='playAudio_new("audio/roze/01.mp3");' >گفتگوی امام و عمر سعد</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" offline="audio/roze/02.mp3" play_type="online" onclick2='playAudio_new("audio/roze/02.mp3");' >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" offline="audio/roze/03.mp3" play_type="offline" onclick2='playAudio_new("audio/roze/03.mp3");' >شهادت غلام امام حسین علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" offline="audio/roze/04.mp3" play_type="online" onclick2='playAudio_new("audio/roze/04.mp3");' >شهادت عبدالله بن الحسن علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" offline="audio/roze/05.mp3" play_type="online" onclick2='playAudio_new("audio/roze/05.mp3");' >شهادت قاسم ابن‌الحسن علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" offline="audio/roze/06.mp3" play_type="online" onclick2='playAudio_new("audio/roze/06.mp3");' >شهادت حضرت علی‌اصغر علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/07.mp3" offline="audio/roze/07.mp3" play_type="online" onclick2='playAudio_new("audio/roze/07.mp3");' >شهادت حضرت علی‌‌اکبر علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/08.mp3" offline="audio/roze/08.mp3" play_type="online" onclick2='playAudio_new("audio/roze/08.mp3");' >شهادت حضرت عباس علیه السلام</li>
+							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/09.mp3" offline="audio/roze/09.mp3" play_type="online" onclick2='playAudio_new("audio/roze/09.mp3");' >عصر عاشورا</li>
 						</ul>
 
 					</div>
@@ -155,13 +345,13 @@ ul.big_list {
 		</div>
 
 <script>
-	function playAudio_new(filename) {
+	function playAudio_new(filename,is_from_web) {
 		$("#durationTimer").html("--:--");
 		$("#audioTimer").html("00:00");
 		
 		audio.stop();
 		setTimeout(function(){
-			playAudio(filename);
+			playAudio(filename,is_from_web);
 		}, 600);
 	}
 </script>
@@ -280,9 +470,9 @@ ul.big_list {
 	}
 
 
-	function playAudio(file){
+	function playAudio(file,is_from_web){
 		//alert(file);
-		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
+		if ( device.platform == 'Android' && is_from_web==false ){//Android,iOS,win7=WinCE,win8=Win32NT
 			file = "/android_asset/www/" + file;
 		}
 		console.log("2");
