--- a/www/online_roze.html
+++ b/www/online_roze.html
@@ -187,6 +187,11 @@
 				true
 			);
 			
+			$("#abort").click( function(i) {
+				FileTransfer_OBJ.abort();
+				$('.progress-bar-parent').css("display","none");
+			});
+			
 		}
 	}
 	
@@ -308,7 +313,8 @@ ul.big_list li.need_download {
 <div class="progress-bar-parent">
 	<div class="progress-bar green glow">
 		<span class="progress-bar-percent" style="width: 2%"></span>
-		<div id="status"></div>
+		<div id="status"></div><br/>
+		<input type="button" id="abort" value="Cancel" />
 	</div>
 	
 </div>
