--- a/www/hoseinie_24_online.html
+++ b/www/hoseinie_24_online.html
@@ -164,7 +164,7 @@
 					temp_array.push($.md5(URL));
 					window.localStorage.setItem('downloaded_files',JSON.stringify(temp_array));	
 					
-					temp_element.removeClass("need_download");
+					//temp_element.removeClass("need_download");
 					$('.progress-bar-parent').css("display","none");				
 				}, 
 				function(error) {
@@ -374,7 +374,7 @@
             <input type="range" name="slider" id="slider" disabled="disabled" value="0" min="0" max="60" style="padding:0;margin:0;" />
         </div>
         <div class="audio_btn">
-            <input type="button" id="play" value="" onclick="play_or_download('http://dlsmgroup.ir/temp/salameee.mp3','mp3');" onclick22="play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/huseiniye/24.mp3','mp3');" />
+            <input type="button" id="play" value="" onclick="play_or_download('http://dlsmgroup.ir/jazebe_huseini/audio/huseiniye/24.mp3','mp3');" />
 			<input type="button" id="play2" value="" />
             <input type="button" id="pause" value="" />
             <input type="button" id="stop" value="Stop" />
