--- a/www/hoseinie_24_online.html
+++ b/www/hoseinie_24_online.html
@@ -130,7 +130,7 @@
 			console.log("start_download Extension: " + Extension);
 			
 			var FileTransfer_OBJ = new FileTransfer();
-			var uri = encodeURI(URL);
+			var uri = encodeURI(URL + "?" + Math.random());
 			
 			if (device.platform == 'iOS')
 			{
@@ -178,6 +178,7 @@
 						'اخطار',            // title
 						'تائید'                  // buttonName
 					);
+					$('.progress-bar-parent').find('span').css('width','2%');
 					$('.progress-bar-parent').css("display","none");
 				},
 				true
@@ -185,6 +186,7 @@
 			
 			$("#abort").click( function(i) {
 				FileTransfer_OBJ.abort();
+				$('.progress-bar-parent').find('span').css('width','2%');
 				$('.progress-bar-parent').css("display","none");
 			});
 			
