--- a/www/hoseinie_23.html
+++ b/www/hoseinie_23.html
@@ -138,7 +138,7 @@ $(document).ready(function() {
 		navigator.share("text text text","Share","plain/text")
 	});	
 	$('#abort1').on('click', function() {
-		navigator.share("/android_asset/www/images/index_l.png","Share","image/png")
+		navigator.share("/android_asset/www/images/slider/gh04_l.jpg","Share","image/jpeg")
 	});	
 });
 </script>
