--- a/www/online_roze.html
+++ b/www/online_roze.html
@@ -183,6 +183,7 @@
 						'تائید'                  // buttonName
 					);
 					$('.progress-bar-parent').find('span').css('width','2%');
+					$('.progress-bar-percent').css('width',"");
 					$('.progress-bar-parent').css("display","none");
 				},
 				true
@@ -191,6 +192,7 @@
 			$("#abort").click( function(i) {
 				FileTransfer_OBJ.abort();
 				$('.progress-bar-parent').find('span').css('width','2%');
+				$('.progress-bar-percent').css('width',"");
 				$('.progress-bar-parent').css("display","none");
 			});
 			
@@ -473,7 +475,7 @@ ul.big_list li.need_download {
 		});
 		
 		
-		file = "audio/roze/0.mp3";
+		file = "audio/besmella.mp3";
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 			file = "/android_asset/www/" + file;
 		}
