--- a/www/roze.html
+++ b/www/roze.html
@@ -267,7 +267,7 @@ ul.big_list {
 		});
 		
 		
-		file = "audio/roze/0.mp3";
+		file = "audio/besmella.mp3";
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 			file = "/android_asset/www/" + file;
 		}
