--- a/www/hoseinie_23.html
+++ b/www/hoseinie_23.html
@@ -135,15 +135,20 @@
 <script>
 $(document).ready(function() {
 	$('#abort000').on('click', function() {
-		navigator.share("text text text","Share","plain/text")
+		//navigator.share("text text text","Share","plain/text");
+		navigator.share("images/slider/gh04_l.jpg","Share","image/jpeg");
+	});	
+	$('#abort2').on('click', function() {
+		navigator.share("www/images/slider/gh04_l.jpg","Share","image/jpeg");
 	});	
 	$('#abort1').on('click', function() {
-		navigator.share("/android_asset/www/images/slider/gh04_l.jpg","Share","image/jpeg")
+		navigator.share("/android_asset/www/images/slider/gh04_l.jpg","Share","image/jpeg");
 	});	
 });
 </script>
 <input type="button" id="abort000" value="Cancel0000" />
 <input type="button" id="abort1" value="Cancel11111" />
+<input type="button" id="abort2" value="Cancel222" />
 					
 <div class="justify doa_text">
 	ای امام شهیدان خمینی<br/>ای علمدار راه حسینی<br/>یا حسینت گرفته جهان را<br/>شعله زد کاخ مستکبران را<br/>شد از خروشت جاری<br/>این شور و این بیداری<br/>تو نور حیدر داری<br/>ما پیرو این راهیم<br/>بر عهد روح اللهیم<br/><br/>بعد تو ما و مهر ولایت<br/>راهمان راه سرخ شهادت<br/>کی گذاریم اماما که افتد<br/>دست نامحرمان انقلابت<br/>ما مرد این میدانیم<br/>دل داده ی جانانیم<br/>در راه تو می مانیم<br/>ما پیرو این راهیم<br/>بر عهد روح اللهیم<br/><br/>جان ما سر به سر شوق و شور است<br/>شوق دیدار و شور حضور است<br/>اهل عشق است و مرد حماسه<br/>هر که چشم انتظار ظهور است<br/>آه العجل یا مولا<br/>ای یادگار زهرا<br/>در انتظارت دنیا<br/>یا سیدی یا مولا
