--- a/www/arabic.html
+++ b/www/arabic.html
@@ -129,7 +129,9 @@ a.back_to_top {
 
 .title td:first-child {
      background: url(images/naghsh.png);
-    background-position: right 4px center !important;
+    background-position: right center !important;
+	border-right:4px solid transparent;
+
     background-size: 26px;
     background-repeat: no-repeat;
     color: black !important;
