--- a/www/bikhavas.html
+++ b/www/bikhavas.html
@@ -94,7 +94,8 @@
 <style>
 ul.big_list li {
   background-image: url("images/naghsh.png");
-  background-position: right 6px top 12px;
+  background-position: right 12px;
+	border-right:6px solid transparent;
   background-repeat: no-repeat;
   background-size: 31px auto;
   border-bottom: 1px solid white;
