--- a/www/dar_safar.html
+++ b/www/dar_safar.html
@@ -235,6 +235,15 @@
 						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
+				<div class="silde_frame slide8th" >
+					<img src="images/slider/letter_l.jpg" class="silde_frame_image" retina="images/slider/letter.jpg" style="width:100%;" onclick="window.location.href='letter.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link"  onclick="window.location.href='letter.html';"  >نامه ای برای تو</div>
+						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
 				<div class="silde_frame slide9th" >
 					<img src="images/slider/h09_l.jpg" class="silde_frame_image" retina="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='arabic.html';" />
 					<div class="slide_navigator">
