--- a/www/en_dar_safar.html
+++ b/www/en_dar_safar.html
@@ -181,6 +181,15 @@
 						<div class="slide_navigator_previous slidesjs-previous">نقشه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
+				<div class="silde_frame slide8th" >
+					<img src="images/slider/h08_l.jpg" class="silde_frame_image" retina="images/slider/h08.jpg" style="width:100%;" onclick="window.location.href='en_hoseinie.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link"  onclick="window.location.href='en_hoseinie.html';"  >Husainiyah</div>
+						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
 				<div class="silde_frame slide3th" >
 					<img src="images/slider/h09_l.jpg" class="silde_frame_image" retina="images/slider/h09.jpg" style="width:100%;" onclick="window.location.href='en_arabic.html';" />
 					<div class="slide_navigator">
