--- a/www/en_ghable_safar.html
+++ b/www/en_ghable_safar.html
@@ -180,6 +180,15 @@
 						<div class="slide_navigator_previous slidesjs-previous">پیشینه <img src="images/slider/previous-btn.png"></div>
 					</div>
 				</div>
+				<div class="silde_frame slide8th" >
+					<img src="images/slider/letter_l.jpg" class="silde_frame_image" retina="images/slider/letter.jpg" style="width:100%;" onclick="window.location.href='en_letter.html';" />
+					<div class="slide_navigator">
+						<div class="slide_navigator_bg"></div>
+						<div class="slide_navigator_next slidesjs-next">مومنانه <img src="images/slider/next-btn.png"></div>
+						<div class="slide_navigator_link"  onclick="window.location.href='en_letter.html';"  >Letter for You</div>
+						<div class="slide_navigator_previous slidesjs-previous">شاعرانه<img src="images/slider/previous-btn.png"></div>
+					</div>
+				</div>
 				<div class="silde_frame slide3th" >
 					<img src="images/slider/gh03_l.jpg" class="silde_frame_image" retina="images/slider/gh03.jpg" style="width:100%;" onclick="window.location.href='en_kuleposhti.html';" />
 					<div class="slide_navigator">
