--- a/www/en_hoseinie.html
+++ b/www/en_hoseinie.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font.css" />
 	<link rel="stylesheet" type="text/css" href="css/simplebar.css" />
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/ltr.css">
 
 	<script src="js/jquery-1.11.3.min.js"></script>
 	<script src="js/console.log.js"></script>
@@ -91,21 +92,19 @@
 		
 <style>
 ul.big_list li {
-  background-image: url("images/naghsh.png");
-  background-position: right 12px;
-  border-right:6px solid transparent;
-  
-  
+  background-image: url("images/naghsh_ltr.png");
+  background-position: left 12px;
+	border-left:6px solid transparent;
   background-repeat: no-repeat;
   background-size: 31px auto;
   border-bottom: 1px solid white;
   box-sizing: border-box;
   cursor: pointer;
-  float: right;
+  float: left;
   font-weight: bold;
   height: 40px;
   line-height: 40px;
-  padding-right: 45px;
+  padding-left: 45px;
   width: 200%;
   list-style:none;
 }
@@ -128,12 +127,12 @@ ul.big_list {
 		<div id="warper" >
 				<div id="header">
 					<div id="back-btn" onclick="parent.history.back();"></div>
-					<div id="header-text-2th">مومنانه</div>
+					<div id="header-text-2th">Husainiyah</div>
 					<div class="center"></div>
 				</div>
 				<div id="footer">
 					<div id="footer-bg">
-						<button class="dw_bottun fontsize">قلم</button>	
+						<button class="dw_bottun fontsize">size</button>	
 						<button class="dw_bottun audio">0</button>	
 						<button class="dw_bottun translate">ترجمه</button>	
 					</div>
@@ -141,19 +140,31 @@ ul.big_list {
 
 				<div id="container">
 					<div id="main" class="">
-						<ul class="big_list" style="direction:rtl;">
-							<li onclick='playAudio_new("audio/salame.mp3");' >عظمت مقام حضرت زینب سلام الله علیها</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >زیارت اربعین، خلاصه نهضت حسینی</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >اربعین احیاگر شهادت</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >اربعین یک آغاز بود</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >اولین شکوفه‌های عاشورایی در اربعین</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >درسی که اربعین به ما میدهد</li>
-							
-							<li onclick="window.location.href='momenane_1th.html';" >اگر ما با هم باشیم (متن)</li>
-							<li onclick="window.location.href='momenane_2th.html';" >فضیلت مردم عراق (متن)</li>
-							<li onclick="window.location.href='momenane_3th.html';" >شور و شعور حسینی (متن)</li>
-
-							<li onclick='playAudio_new("audio/salame.mp3");' >ارتباطات با برادران دینیتان را احیا کنید</li>
+						<ul class="big_list">
+							<li onclick='playAudio_new("audio/huseiniye/01.mp3");' >Madahi 1th</li>
+							<li onclick='playAudio_new("audio/huseiniye/02.mp3");' >Madahi 2th</li>
+							<li onclick='playAudio_new("audio/huseiniye/03.mp3");' >Madahi 3th</li>
+							<li onclick='playAudio_new("audio/huseiniye/04.mp3");' >Madahi 4th</li>
+							<li onclick='playAudio_new("audio/huseiniye/05.mp3");' >Madahi 5th</li>
+							<li onclick='playAudio_new("audio/huseiniye/06.mp3");' >Madahi 6th</li>
+							<li onclick='playAudio_new("audio/huseiniye/07.mp3");' >Madahi 7th</li>
+							<li onclick='playAudio_new("audio/huseiniye/08.mp3");' >Madahi 8th</li>
+							<li onclick='playAudio_new("audio/huseiniye/09.mp3");' >Madahi 9th</li>
+							<li onclick='playAudio_new("audio/huseiniye/10.mp3");' >Madahi 10th</li>
+							<li onclick='playAudio_new("audio/huseiniye/11.mp3");' >Madahi 11th</li>
+							<li onclick='playAudio_new("audio/huseiniye/12.mp3");' >Madahi 12th</li>
+							<li onclick='playAudio_new("audio/huseiniye/13.mp3");' >Madahi 13th</li>
+							<li onclick='playAudio_new("audio/huseiniye/14.mp3");' >Madahi 14th</li>
+							<li onclick='playAudio_new("audio/huseiniye/15.mp3");' >Madahi 15th</li>
+							<li onclick='playAudio_new("audio/huseiniye/16.mp3");' >Madahi 16th</li>
+							<li onclick='playAudio_new("audio/huseiniye/17.mp3");' >Madahi 17th</li>
+							<li onclick='playAudio_new("audio/huseiniye/18.mp3");' >Madahi 18th</li>
+							<li onclick='playAudio_new("audio/huseiniye/19.mp3");' >Madahi 19th</li>
+							<li onclick='playAudio_new("audio/huseiniye/20.mp3");' >Madahi 20th</li>
+							<li onclick='playAudio_new("audio/huseiniye/21.mp3");' >Madahi 21th</li>
+							<li onclick='playAudio_new("audio/huseiniye/22.mp3");' >Madahi 22th</li>
+							<li onclick='playAudio_new("audio/huseiniye/23.mp3");' >Madahi 23th</li>
+							<li onclick='playAudio_new("audio/huseiniye/24.mp3");' >Madahi 24th</li>
 						</ul>
 
 					</div>
@@ -200,7 +211,7 @@ ul.big_list {
 	<div id="controls_bg"></div>
 </div>
 <script>
-	//init_audio("audio/salame.mp3");
+	//init_audio("audio/roze/0.mp3");
 
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
@@ -273,7 +284,7 @@ ul.big_list {
 		});
 		
 		
-		file = "audio/salame.mp3";
+		file = "audio/besmella.mp3";
 		if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
 			file = "/android_asset/www/" + file;
 		}
