--- a/www/en_lavazem.html
+++ b/www/en_lavazem.html
@@ -185,7 +185,7 @@
 ul#list li.active {
     background-image: url(images/checkbox_on.png) !important;
     background-size: 19px;
-    background-position: right 0px center;
+    background-position: 0px center;
 }
 ul#list li {
     box-sizing: border-box;
@@ -196,7 +196,7 @@ ul#list li {
     padding-right: 29px;
     background-image: url(images/checkbox_off.png);
     background-repeat: no-repeat;
-    background-position: right 7px center;
+    background-position: 7px center;
     background-size: 12px;
 	cursor:pointer
 }
