--- a/www/hoseinie.html
+++ b/www/hoseinie.html
@@ -165,7 +165,7 @@
 					<li><a href="hoseinie_21.html">زائر کوی حسین</a></li>
 					<li><a href="hoseinie_22.html">کربلا ای بهشت محبین اهل‌بیت</a></li>
 					<li><a href="hoseinie_23.html">ای امام شهیدان خمینی</a></li>
-					<li><a href="hoseinie_24_online.html">از خیمه برون چو رسول الله</a></li>
+					<li><a href="hoseinie_24.html">از خیمه برون چو رسول الله</a></li>
 				</ul>
 
 			
