--- a/www/letter.html
+++ b/www/letter.html
@@ -136,8 +136,35 @@
 <br/>
 شاید شما هم جزء کسانی باشید که به زبانهای انگلیسی و فرانسوی و... تسلط ندارید اما قصد دارید در این جنبش بزرگ، حضور داشته باشید در این قسمت متن این نامه به زبان های مختلف قابلیت انتشار دارد.
 <br/>
-<div>
-				</div>
+<style>
+.share_btn{
+	display:block;
+	text-align:center;
+	width:100%;
+	max-width:500px;
+	margin:7px auto;
+	box-sizing: border-box;
+	padding:0 7px;
+	background-color:#e1e1e1;
+	background-image:url('images/letter_brn.jpg');
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: 35px auto;
+	border:1px solid #adadad;
+    height: 35px;
+    line-height: 35px;
+	border-radius:5px;
+}
+</style>
+
+<button class="share_btn" onclick="window.location.href = 'letter_text.html';">مطالعه نامه</button>
+<button class="share_btn" onclick="window.location.href = 'pdf/fa.pdf';">تست</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/fa.pdf')">اشتراک گذاری به زبان فارسی</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/en.pdf')">اشتراک گذاری به زبان انگلیسی</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/ar.pdf')">اشتراک گذاری به زبان عربی</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/fr.pdf')">اشتراک گذاری به زبان فرانسوی</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/es.pdf')">اشتراک گذاری به زبان اسپانیولی</button>
+<br/><br/>
 			</div>
 	</div>
 	<div id="controls_size">
