--- a/www/letter_text.html
+++ b/www/letter_text.html
@@ -134,7 +134,7 @@
 	<img src="images/leter_title.jpg" style="width:100%;max-width:650px;margin:0 auto 10px auto;">
 </div>
 <div style="display:block;text-align:center;widows:100%;">بسم‌ الله الرّحمن الرّحیم</div>
-به عموم جوانان در اروپا و امریکای شمالی
+<b>به عموم جوانان در اروپا و امریکای شمالی</b>
 <br/>
 حوادث اخیر در فرانسه و وقایع مشابه در برخی دیگر از کشورهای غربی مرا متقاعد کرد که درباره‌ی آنها مستقیماً با شما سخن بگویم. من شما جوانان را مخاطب خود قرار میدهم؛ نه به این علّت که پدران و مادران شما را ندیده می‌انگارم، بلکه به این سبب که آینده‌ی ملّت و سرزمینتان را در دستان شما میبینم و نیز حسّ حقیقت‌جویی را در قلبهای شما زنده‌تر و هوشیارتر می‌یابم. همچنین در این نوشته به سیاستمداران و دولتمردان شما خطاب نمیکنم، چون معتقدم که آنان آگاهانه راه سیاست را از مسیر صداقت و درستی جدا کرده‌اند.
 <br/>
@@ -147,6 +147,7 @@
 خواسته‌ی دوم من این است که در واکنش به سیل پیشداوری‌ها و تبلیغات منفی، سعی کنید شناختی مستقیم و بی‌واسطه از این دین به دست آورید. منطق سلیم اقتضاء میکند که لااقل بدانید آنچه شما را از آن میگریزانند و میترسانند، چیست و چه ماهیّتی دارد. من اصرار نمیکنم که برداشت من یا هر تلقّی دیگری از اسلام را بپذیرید بلکه میگویم اجازه ندهید این واقعیّت پویا و اثرگذار در دنیای امروز، با اغراض و اهداف آلوده به شما شناسانده شود. اجازه ندهید ریاکارانه، تروریست‌های تحت استخدام خود را به عنوان نمایندگان اسلام به شما معرفی کنند. اسلام را از طریق منابع اصیل و مآخذ دست اوّل آن بشناسید. با اسلام از طریق قرآن و زندگی پیامبر بزرگ آن (صلّی‌الله‌علیه‌وآله‌و‌سلّم) آشنا شوید. من در اینجا مایلم بپرسم آیا تاکنون خود مستقیماً به قرآن مسلمانان مراجعه کرده‌اید؟ آیا تعالیم پیامبر اسلام (صلّی‌الله‌علیه‌وآله‌وسلّم) و آموزه‌های انسانی و اخلاقی او را مطالعه کرده‌اید؟ آیا تاکنون به جز رسانه‌ها، پیام اسلام را از منبع دیگری دریافت کرده‌اید؟ آیا هرگز از خود پرسیده‌اید که همین اسلام، چگونه و بر مبنای چه ارزشهایی طیّ قرون متمادی، بزرگترین تمدّن علمی و فکری جهان را پرورش داد و برترین دانشمندان و متفکّران را تربیت کرد؟
 <br/>
 من از شما میخواهم اجازه ندهید با چهره‌پردازی‌های موهن و سخیف، بین شما و واقعیّت، سدّ عاطفی و احساسی ایجاد کنند و امکان داوری بیطرفانه را از شما سلب کنند. امروز که ابزارهای ارتباطاتی، مرزهای جغرافیایی را شکسته است، اجازه ندهید شما را در مرزهای ساختگی و ذهنی محصور کنند. اگر چه هیچکس به‌صورت فردی نمیتواند شکافهای ایجاد شده را پر کند، امّا هر یک از شما میتواند به قصد روشنگریِ خود و محیط پیرامونش، پلی از اندیشه و انصاف بر روی آن شکافها بسازد. این چالش از پیش طراحی شده بین اسلام و شما جوانان، اگر چه ناگوار است امّا میتواند پرسش‌های جدیدی را در ذهن کنجکاو و جستجوگر شما ایجاد کند. تلاش در جهت یافتن پاسخ این پرسش‌ها، فرصت مغتنمی را برای کشف حقیقت‌های نو پیش روی شما قرار میدهد. بنابراین، این فرصت را برای فهم صحیح و درک بدون پیشداوری از اسلام از دست ندهید تا شاید به یمن مسئولیّت‌پذیری شما در قبال حقیقت، آیندگان این برهه از تاریخ تعامل غرب با اسلام را با آزردگی کمتر و وجدانی آسوده‌تر به نگارش درآورند.
+<br/>
 <br/>
 سیّدعلی خامنه‌ای
 <br/>
