--- a/www/en_letter.html
+++ b/www/en_letter.html
@@ -136,9 +136,36 @@
 Iran’s Supreme Leader, Ayatollah Seyyed Ali Khamenei, penned an open letter to the young people of the Western world defending Islam and slamming North American and European countries' skewed interpretations of the Islam and their own histories.
 <br/>
 Please Share If You Care For Others
-<br/>
+<br/><br/>
 #LETTER4U
-	
+<style>
+.share_btn{
+	display:block;
+	text-align:center;
+	width:100%;
+	max-width:500px;
+	margin:7px auto;
+	box-sizing: border-box;
+	padding:0 7px;
+	background-color:#e1e1e1;
+	background-image:url('images/letter_brn.jpg');
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: 35px auto;
+	border:1px solid #adadad;
+    height: 35px;
+    line-height: 35px;
+	border-radius:5px;
+}
+</style>
+
+<button class="share_btn" onclick="window.location.href = 'en_letter_text.html';">Read The Letter</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/fa.pdf')">SHARE IT IN PERSIAN</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/en.pdf')">SHARE IT IN ENGLISH</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/ar.pdf')">SHARE IT IN ARABIC</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/fr.pdf')">SHARE IT IN FRENCH</button>
+<button class="share_btn" onclick="window.plugins.socialsharing.share('A LETTER FOR YOU...', 'PDF', 'www/pdf/es.pdf')">SHARE IT IN SPANISH</button>
+<br/><br/>
 <div>
 				</div>
 			</div>
