--- a/www/roze.html
+++ b/www/roze.html
@@ -356,9 +356,9 @@ ul.big_list li.need_download {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/01.mp3" play_type="offline" >گفتگوی امام و عمر سعد</li>
-							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" play_type="offline" >گفتگوی امام و حضرت زینب سلام الله علیها</li>
-							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" play_type="offline" >شهادت غلام امام حسین علیه السلام</li>
+							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/01.mp3" play_type="offline" >گفتگوی امام و عمر سعد</li>
+							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/02.mp3" play_type="offline" >گفتگوی امام و حضرت زینب سلام الله علیها</li>
+							<li class="play_it " online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/03.mp3" play_type="offline" >شهادت غلام امام حسین علیه السلام</li>
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/04.mp3" play_type="online" >شهادت عبدالله بن الحسن علیه السلام</li>
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/05.mp3" play_type="online" >شهادت قاسم ابن‌الحسن علیه السلام</li>
 							<li class="play_it need_download" online="http://dlsmgroup.ir/jazebe_huseini/audio/roze/06.mp3" play_type="online" >شهادت حضرت علی‌اصغر علیه السلام</li>
