--- a/www/en_letter.html
+++ b/www/en_letter.html
@@ -118,7 +118,7 @@
 	<div id="warper" >
 			<div id="header">
 				<div id="back-btn" onclick="parent.history.back();"></div>
-				<div id="header-text-2th">Letter for You</div>
+				<div id="header-text-2th">A LETTER FOR YOU</div>
 				<div class="center"></div>
 			</div>
 			<div id="footer">
@@ -151,10 +151,10 @@ Please Share If You Care For Others
 	background-image:url('images/letter_brn.jpg');
     background-position: left top;
     background-repeat: no-repeat;
-    background-size: 35px auto;
+    background-size: 45px auto;
 	border:1px solid #adadad;
-    height: 35px;
-    line-height: 35px;
+    height: 45px;
+    line-height: 45px;
 	border-radius:5px;
 }
 </style>
